--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <body>
     <div class="container">
 
-
-
-
-
-
-
+        <nav>navbar</nav>
+        <main>main</main>
+        <div id="sidebar">sidebar</div>
+        <div id="content">content</div>
+        <div id="paragraph">paragraph</div>
+        <div id="templete">templete</div>
+        <footer>footer</footer>
         
+
+
+
+
+
     </div>
     
 </body>
